--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="fa">
 <head>
     <meta charset="UTF-8">
-    <title>مشاور طول عمر mozarex™ - نسخه 1.0</title>
+    <title>مشاور افزایش طول عمر mozarex™ - نسخه 1.0</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -181,7 +181,7 @@
     <div class="container">
         <header>
             <img src="{{ url_for('static', filename='logo.jpeg') }}" alt="Logo" style="height:70px; margin-bottom:10px;">
-            <h1>مشاور طول عمر mozarex™</h1>
+            <h1>مشاور افزایش طول عمر mozarex™</h1>
             <h2>نسخه 1.0</h2>
         </header>
         <p class="instructions">
@@ -215,9 +215,9 @@
                 <label for="diet">رژیم غذایی:</label>
                 <select id="diet" name="diet" required>
                     <option value="">انتخاب کنید</option>
-                    <option value="نامتعادل">نامتعادل</option>
+                    <option value="نامتعادل">بسیار ناسالم</option>
                     <option value="متعادل">متعادل</option>
-                    <option value="سالم">سالم</option>
+                    <option value="سالم">بسیار سالم</option>
                 </select>
             </div>
             <div class="form-group">
@@ -250,16 +250,16 @@
                 <label for="smoking">مصرف سیگار:</label>
                 <select id="smoking" name="smoking" required>
                     <option value="">انتخاب کنید</option>
-                    <option value="ندارد">ندارد</option>
-                    <option value="دارد">دارد</option>
+                    <option value=ندارد">ندارم</option>
+                    <option value="دارد">دارم</option>
                 </select>
             </div>
             <div class="form-group">
                 <label for="alcohol">مصرف الکل:</label>
                 <select id="alcohol" name="alcohol" required>
                     <option value="">انتخاب کنید</option>
-                    <option value="ندارد">ندارد</option>
-                    <option value="دارد">دارد</option>
+                    <option value="ندارد">ندارم</option>
+                    <option value="دارد">دارم</option>
                 </select>
             </div>
             <div id="bmiResult"></div>
