--- a/templates/result.html
+++ b/templates/result.html
@@ -2,7 +2,7 @@
 <html lang="fa">
 <head>
     <meta charset="UTF-8">
-    <title>نتیجه مشاور طول عمر mozarex™ - نسخه 1.0</title>
+    <title>نتیجه مشاور افزایش طول عمر mozarex™ - نسخه 1.0</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -145,7 +145,7 @@
     <div class="container">
         <header>
             <img src="{{ url_for('static', filename='logo.jpeg') }}" alt="Logo" style="height:70px; margin-bottom:10px;">
-            <h1>نتیجه مشاور طول عمر mozarex™</h1>
+            <h1>نتیجه مشاور افزایش طول عمر mozarex™</h1>
             <h2>نسخه 1.0</h2>
         </header>
         <section class="summary-section">
