--- a/templates/index.html
+++ b/templates/index.html
@@ -258,11 +258,11 @@
         <header>
             <img src="/static/logo.jpeg" alt="لوگوی mozarex" style="height:50px; margin-bottom:8px;" loading="lazy">
             <h1>مشاور افزایش طول عمر mozarex™</h1>
-            <h2>نسخه 2.0</h2>
+            <h2>نسخه 1.0</h2>
         </header>
         <p class="instructions">
             لطفاً اطلاعات سبک زندگی خود را وارد کنید تا سیستم هوش مصنوعی ما 
-            پیشنهادهای پیشرفته‌ای برای بهبود سلامت و افزایش طول عمر ارائه دهد.
+            پیشنهادات شخصی سازی شده برای بهبود سلامت و افزایش طول عمر ارائه دهد.
         </p>
         <form action="/result" method="POST" id="healthForm" novalidate>
             <div class="progress-container">
